# esp32-chess-board

./: .gitignore  CMakeLists.txt  LICENSE  README.md  platformio.ini  sdkconfig.defaults
lib/Adafruit_SH110x/: Adafruit_SH1106G.cpp  Adafruit_SH110X.h  splash.h
lib/Adafruit_SH110x/scripts/: make_splash.py
lib/rfid/src/: MFRC522.cpp  MFRC522.h  MFRC522Extended.h
release/: flash.txt
src/: CMakeLists.txt  globals.cpp  globals.h  main.cpp
src/app/board/: board.cpp  board.h
src/app/chess/: chess.cpp  chess.h  chess_moves.cpp  chess_priv.h
src/app/lichess/: lichess_client.cpp  lichess_client.h
src/app/ui/: buttons.cpp  buttons.h  display.cpp  display.h  leds.cpp  leds.h  ui.cpp  ui.h
src/app/web/: board.html  index.html  web_server.cpp  web_server.h  web_server_cfg.h
src/app/wifi/: wifi_setup.cpp  wifi_setup.h  wifi_setup_cfg.h
src/board/: board.cpp  board.h
src/chess/: chess.cpp  chess.h  chess_moves.cpp  chess_priv.h
src/hal/: hal_adc.c  hal_adc.h  hal_adc_cfg.h  hal_gpio.c  hal_gpio.h  hal_gpio_cfg.h  hal_i2c.c  hal_i2c.h  hal_i2c_cfg.h  hal_spi.c  hal_spi.h  hal_spi_cfg.h
src/lib/graphics/: glcdfont.h  graphics.cpp  graphics.h
src/lib/lichess/: apiclient.cpp  apiclient.h  apiclient_cfg.h  board_api.cpp  board_api.h  challenges_api.cpp  challenges_api.h  secclient.cpp  secclient.h
src/lib/mfrc522/: mfrc522.cpp  mfrc522.h
src/lib/oledmono/: oledmono.cpp  oledmono.h  sh110x.cpp  sh110x.h  splash.h
src/lichess/: lichess_api.cpp  lichess_api.h  lichess_api_cfg.h  lichess_board.cpp  lichess_board.h  lichess_challenges.cpp  lichess_challenges.h  lichess_task.cpp
src/ui/: buttons.cpp  buttons.h  display.cpp  display.h  leds_offsets.xlsx  ledstrip.cpp  ledstrip.h  ui.cpp  ui.h
src/wifi/: favicon.svg.h  index.html  index.html.h  web_server.cpp  web_server.h  web_server_cfg.h  wifi_setup.cpp  wifi_setup.h  wifi_setup_cfg.h
