
idf_component_register(
    SRCS
        "main.cpp"
        "globals.cpp"
        "app/board/board.cpp"
        "app/lichess/lichess_client.cpp"
        "app/ui/ui.cpp"
        "app/wifi/wifi_setup.cpp"
    INCLUDE_DIRS
        "."
        "app"
    REQUIRES
        app_update
        driver
        esp_partition
        esp_psram
        esp_wifi
        nvs_flash
        spi_flash
)
