
idf_component_register(
    SRCS
        "main.cpp"
        "globals.cpp"
        "app/board/board.cpp"
        "app/lichess/lichess_client.cpp"
        "app/ui/buttons.cpp"
        "app/ui/display.cpp"
        "app/ui/leds.cpp"
        "app/ui/ui.cpp"
        "app/web/web_server.cpp"
        "app/wifi/wifi_setup.cpp"
        "hal/hal_adc.c"
        "hal/hal_gpio.c"
        "hal/hal_i2c.c"
        "lib/graphics/graphics.cpp"
        "lib/led_strip/led_strip_encoder.c"
        "lib/oledmono/oledmono.cpp"
        "lib/oledmono/sh110x.cpp"
    INCLUDE_DIRS
        "."
        "app"
        "hal"
        "lib"
    EMBED_FILES
        "app/web/index.html"
        "app/web/favicon.svg"
    REQUIRES
        app_update
        driver
        esp_adc
        esp_http_server
        esp_partition
        esp_psram
        esp-tls
        esp_wifi
        nvs_flash
        spi_flash
)
